# swarm

swarm-forge/: README.md  ROADMAP.md  pyproject.toml
swarm-forge/.github/workflows/: ci.yml
swarm-forge/swarm_forge/agents/: base.py  roles.py
swarm-forge/swarm_forge/cli/: main.py
swarm-forge/swarm_forge/core/: config.py  logging.py  project_manager.py  settings.py
swarm-forge/tests/: conftest.py  test_logging.py  test_settings.py  utils.py
swarm-forge/tests/agents/: test_base.py  test_product_manager.py
